--- a/KiemThuNangCao_Intellij/AllLab/Lab02/pom.xml
+++ b/KiemThuNangCao_Intellij/AllLab/Lab02/pom.xml
@@ -26,8 +26,11 @@
             <artifactId>junit</artifactId>
             <version>4.11</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>2.2</version>
+        </dependency>
 
     </dependencies>
 
